<?xml version="1.0" encoding="utf-8" standalone="no"?>
	<!--
		this file is built by arct v:froyo_2011-03-23, Thu Apr 10 20:17:14 CST 2014
	-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">"Weather"</string>
    <string name="menu_addlocation">"Add a location"</string>
    <string name="menu_delete">"Delete location"</string>
    <string name="menu_unit">"Change unit"</string>
    <string name="locate_auto">"Auto locate"</string>
    <string name="locate_or">OR</string>
    <string name="locate_connect_error">"Can not connect to the internet."</string>
    <string name="locate_goto_connect">"Go to connect"</string>
    <string name="locate_failure">"Auto locate failed. Please search a location instead."</string>
    <string name="locate_search">Search a Location</string>
    <string name="locate_location_service">"Auto locate failure,please check the network location service."</string>
    <string name="insert_location">"Insert a location"</string>
    <string name="connect_timeout">"Weak signal. Please try it later."</string>
    <string name="connot_find_location">"This location cannot be found."</string>
    <string name="real_feel">"RealFeel"</string>
    <string name="citys_full">"Sorry, you can only add 11 cities. Please remove one."</string>
    <string name="update_faild">Update failure,please check your internet connection.</string>
    <string name="searching">"Searching…"</string>
    <string name="locating">"Locating…"</string>
    <string name="loading">"Loading..."</string>
    <string name="weather_offline">"Weather Offline"</string>
    <string name="update_time">"Update time"</string>
    <string name="common_ok">"OK"</string>
    <string name="common_cancel">"Cancel"</string>
    <string name="date_am">"AM"</string>
    <string name="date_pm">"PM"</string>
    <string name="location">"Location"</string>
    <string name="click_update">"Click here to update"</string>
    
    <!-- PR 454243 - ting.chen@tct-nj.com - added begin -->
    <string name="weather_off_line_text">"Sorry, unable to connect."</string>
    <!-- PR 454243 - ting.chen@tct-nj.com - added end -->

    <string-array name="weather_icon_desc">
        <item>Sunny</item>
        <item>Mostly Sunny</item>
        <item>Partly Sunny</item>
        <item>Intermittent Clouds</item>
        <item>Hazy Sunshine</item>
        <item>Mostly Cloudy</item>
        <item>Cloudy</item>
        <item>Dreary</item>
        <item/>
        <item/>
        <item>Fog</item>
        <item>Showers</item>
        <item>Mostly Cloudy with Showers</item>
        <item>Partly Sunny with Showers</item>
        <item>Thunderstorms</item>
        <item>Mostly Cloudy with Thunder Showers</item>
        <item>Partly Sunny with Thunder Showers</item>
        <item>Rain</item>
        <item>Flurries</item>
        <item>Mostly Cloudy with Flurries</item>
        <item>Partly Sunny with Flurries</item>
        <item>Snow</item>
        <item>Mostly Cloudy with Snow</item>
        <item>Ice</item>
        <item>Sleet</item>
        <item>Freezing Rain</item>
        <item/>
        <item/>
        <item>Rain and Snow Mixed</item>
        <item>Hot</item>
        <item>Cold</item>
        <item>Windy</item>
        <item>Clear</item>
        <item>Mostly Clear</item>
        <item>Partly Cloudy</item>
        <item>Intermittent Clouds</item>
        <item>Hazy</item>
        <item>Mostly Cloudy</item>
        <item>Partly Cloudy with Showers</item>
        <item>Mostly Cloudy with Showers</item>
        <item>Partly Cloudy with Thunder Showers</item>
        <item>Mostly Cloudy with Thunder Showers</item>
        <item>Mostly Cloudy with Flurries</item>
        <item>Mostly Cloudy with Snow</item>
    </string-array>
    <string-array name="weather_weekly">
        <item>"Mon"</item>
        <item>"Tue"</item>
        <item>"Wed"</item>
        <item>"Thu"</item>
        <item>"Fri"</item>
        <item>"Sat"</item>
        <item>"Sun"</item>
    </string-array>

    <!-- add by lijun.ye for PR462130 2013-06-01 START-->
    <string name="default_temp" translatable="false">"-°"</string>
    <string name="widget_12_hours_format" translatable="false">h:mm</string>
    <string name="widget_24_hours_format" translatable="false">kk:mm</string>
    <string name="am_pm_12_hours" translatable="false">aa</string>
    <string name="am_pm_24_hours" translatable="false"/>
    <!-- CR746638 Change date&time display format by jielong.xing at 2014-07-27 begin -->
    <string name="weekday_keyguard" translatable="false">EEE,</string>
    <!-- CR746638 Change date&time display format by jielong.xing at 2014-07-27 end -->
    <!-- add by lijun.ye for PR462130 2013-06-01 END-->
    
     <!-- CR-490103 Neo Skunkworks - Nicky Ni -001 start -->
    <string name="lable_refresh">"Refresh"</string>
     <!-- CR-490103 Neo Skunkworks - Nicky Ni -001 end -->
     
     <string name="msg_unable_obtain_location">"Unable to obtain the latest location."</string>
     <!-- PR796640 need pre-set Tokyo as prefer city in this app by jielong.xing at 2014-09-30 begin -->
     <string name="tokyo_name">"tokyo"</string>
     <!-- PR796640 need pre-set Tokyo as prefer city in this app by jielong.xing at 2014-09-30 end -->
     <!-- FR821437 Translate the new string by jielong.xing at 2014-10-30 begin -->
     <string name="last_updated_label">"Last updated:"</string>
     <string name="change_to_C">"Change to °C"</string>
     <string name="change_to_F">"Change to °F"</string>
     <!-- FR821437 Translate the new string by jielong.xing at 2014-10-30 end -->

<!-- eBOOLEAN def_weather_use_baidumap - location source control: 0x01: use baidumap in china. 0x00: use accuweather for other country -->
    <bool name="def_weather_use_baidumap" >false</bool>
<!-- eBOOLEAN def_weather_use_province_as_locationname - location source control: 0x01: use in taiwan.It will use the province name as location name 0x00: in other position,use the city name,0x00 for default -->
    <bool name="def_weather_use_province_as_locationname" >false</bool>
<!-- AsciiString def_weather_unit_name - To customize the temperature unit. "isUnitF" for Fahrenheit, "isUnitC" for Celsius. -->
    <string name="def_weather_unit_name" >"isUnitC"</string>
<!-- PR729705 The hourlyactivity is not hide when the value of def_weather_hide_hourlyactivity is 1 by jielong.xing at 2014-07-15 begin -->
<!-- eBOOLEAN def_weather_hide_hourlyactivity - location source control: 0x01: use in russia.It will hide the hourlyactivity  0x00: in other position,when click the weather will show the hourlyactivity,0x00 for default -->
    <bool name="def_weather_hide_hourlyactivity" >false</bool>
<!-- PR729705 The hourlyactivity is not hide when the value of def_weather_hide_hourlyactivity is 1 by jielong.xing at 2014-07-15 end -->
<!-- PR796640 need pre-set Tokyo as prefer city in this app by jielong.xing at 2014-09-30 begin -->
<!-- eBOOLEAN feature_jrdweather_forceSetTokyoAsDefaultCity_on - control whether force set Tokyo when start app: 0x01: force to set  0x00: donot force to set,0x00 for default -->
    <bool name="def_weather_forceSetTokyoAsDefaultCity_on" >false</bool>
<!-- PR796640 need pre-set Tokyo as prefer city in this app by jielong.xing at 2014-09-30 end -->
<!-- add by jielong.xing for RR947763 at 2015-3-17 begin -->
<!-- eBOOLEAN def_widget_use_system_dateformat_on - control whether widget use system dateformat: 0x01: true  0x00: false,0x00 for default -->
    <bool name="def_widget_use_system_dateformat_on" >false</bool>
<!-- add by jielong.xing for RR947763 at 2015-3-17 end -->

</resources>
