<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_night"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/locate_layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:visibility="visible" >

        <Button
            android:id="@+id/locate_bt_auto"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/locate_auto"
            android:textColor="#FFFFFF" />

        <ListView
            android:id="@+id/search_citylist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/locate_layout_connect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:fontFamily="sans-serif"
            android:text="@string/locate_connect_error"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <Button
            android:id="@+id/locate_connect"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/locate_goto_connect"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>