<?xml version="1.0" encoding="utf-8"?>
<!-- PR744796 Jrdweather dev for android4.4 HDPI by jielong.xing at 2014-07-22 begin -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_weather_clock_widget"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical" >
    <!-- update by jielong.xing for icon displays abnormal and rtl layout is overlap at 2014-07-29 begin -->
    <LinearLayout
        android:id="@+id/weather_clock_widget_layout"
        android:layout_width="138dp"
        android:layout_height="138dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/icons_01"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/clock_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextClock
                    android:id="@+id/clock_widget_time"
                    style="@style/shadow_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="sans-serif-light"
                    android:format12Hour="@string/widget_12_hours_format"
                    android:format24Hour="@string/widget_24_hours_format"
                    android:gravity="left|bottom"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:textSize="48dp" />
                <TextClock
                    android:id="@+id/am_pm"
                    style="@style/shadow_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="sans-serif-light"
                    android:format12Hour="@string/am_pm_12_hours"
                    android:format24Hour="@string/am_pm_24_hours"
                    android:gravity="bottom"
                    android:textSize="14dp" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:layout_marginLeft="6dp"
                android:orientation="horizontal" >
                <TextClock
                    android:id="@+id/day_of_week"
                    style="@style/shadow_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:layout_marginEnd="12dp"
                    android:format12Hour="@string/weekday_keyguard"
                    android:format24Hour="@string/weekday_keyguard"
                    android:textColor="#ffffff"
                    android:textSize="14dp" />
                <TextClock
                    android:id="@+id/date"
                    style="@style/shadow_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:format12Hour="@string/month_day_keyguard_24_hours"
                    android:format24Hour="@string/month_day_keyguard_24_hours"
                    android:textSize="14dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/empty_offline_part"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/add_location"
                style="@style/shadow_style"
                android:layout_width="138dp"
                android:layout_height="105dip"
                android:layout_marginTop="2dp"
                android:text="@string/menu_addlocation"
                android:textSize="16dip"
                android:visibility="visible" />
            <TextView
                android:id="@+id/widget_offline_text"
                style="@style/shadow_style"
                android:layout_width="138dp"
                android:layout_height="105dp"
                android:layout_marginTop="2dp"
                android:text="@string/weather_off_line_text"
                android:textSize="16dip"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weather_part"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:visibility="gone" >
            <LinearLayout
                android:id="@+id/city_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/city_name_auto"
                    style="@style/shadow_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="138dp"
                    android:drawableRight="@drawable/widget_auto_location_city"
                    android:drawableEnd="@drawable/widget_auto_location_city"
                    android:singleLine="true"
                    android:textSize="14dp"
                    android:visibility="gone" />
                <TextView
                    android:id="@+id/city_name"
                    style="@style/shadow_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="138dp"
                    android:textSize="14dp"
                    android:singleLine="true"
        			android:ellipsize="end" />
                <TextView
                    android:id="@+id/real_temperature"
                    style="@style/shadow_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="24dp" />
            </LinearLayout>
        </LinearLayout>
      <!-- update by jielong.xing for icon displays abnormal and rtl layout is overlap at 2014-07-29 end -->
    </LinearLayout>
</RelativeLayout>
<!-- PR744796 Jrdweather dev for android4.4 HDPI by jielong.xing at 2014-07-22 end -->
